--- a/index.html
+++ b/index.html
@@ -3,123 +3,127 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ambica-Protfolio</title>
-    <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
+    <title>Ambica Portfolio</title>
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;500;600;800&family=Poppins:wght@300;400;500;900&family=Roboto+Mono:wght@300;500;700&family=Roboto+Slab:wght@200;300;400;700&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="nav_bar">
+
+    <!-- Navbar -->
+    <nav class="nav_bar">
         <div class="left_side">
-            <div class="name">
-                <h2><span style="color: orangered;">A</span>mbica</h2>
-            </div>
-        </div><!--
+            <h2><span style="color: orangered;">A</span>mbica</h2>
+        </div>
+        <!-- Optional nav list (uncomment to use)
         <div class="right_side">
-            <div class="list_container">
-                <ul class="service_list">
-                    <li class="serve" ><a href="#home" style="color: orangered;">Home</a></li>
-                    <li class="serve"><a href="#about">About me</a></li>
-                    <li class="serve"><a href="#Certificates">Certificates</a></li>
-                    <li class="serve"><a href="#Contact"></a></li>
-                </ul>
-            </div>
-        </div>-->
-    </div>
-    <div class="main_container">
+            <ul class="service_list">
+                <li><a href="#home" style="color: orangered;">Home</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#Certificates">Certificates</a></li>
+                <li><a href="#Contact">Contact</a></li>
+            </ul>
+        </div>
+        -->
+    </nav>
+
+    <!-- Main Section -->
+    <section class="main_container" id="home">
         <div class="left_container">
-           <div class="heading">
-            <h1>Hi, I'm Bejagama<span style="color:orangered;"><span> Ambica</h1>
-            <p>
-                I'm a passionate student on a journey of self-discovery through learning and creativity. As I pursue my studies, I'm constantly honing my skills and exploring new horizons. This portfolio is a glimpse into my evolving world of knowledge and the projects that fuel my curiosity.
-            </p>
-            <button class="btns"><a href="https://drive.google.com/file/d/1WIuHvUFR2iTjh2Uvw-u56yK3NW_JV0qJ/view?usp=sharing" download="CV.pdf">Download CV</a></button>
-            <span><i class="fa-brands fa-instagram"></i></span>
-            <span><i class="fa-brands fa-twitter"></i></span>
-            <span><i class="fa-brands fa-facebook"></i></span>
-            <span><i class="fa-brands fa-linkedin"></i></span>
-            <span><i class="fa-brands fa-github"></i></span>
-           </div>
+            <div class="heading">
+                <h1>Hi, I'm Bejagama <span style="color:orangered;">Ambica</span></h1>
+                <p>
+                    I'm a passionate student on a journey of self-discovery through learning and creativity.
+                    This portfolio is a glimpse into my evolving world of knowledge and the projects that fuel my curiosity.
+                </p>
+                <a class="btns" href="https://drive.google.com/file/d/1WIuHvUFR2iTjh2Uvw-u56yK3NW_JV0qJ/view?usp=sharing" target="_blank" download="Ambica_CV.pdf">Download CV</a>
+                <div class="social_icons">
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                </div>
+            </div>
         </div>
         <div class="right_container">
-            <div class="ambica_image">
-                <!-- <div class="shape"></div> -->
-                <img src="img.png" alt="img">
-            </div>
+            <img src="img.png" alt="Ambica photo">
         </div>
-    </div>
-    <div class="about">
-      <div class="image_sec">
-        <div class="img">
-            <img src="img2.png" alt="img" width="400" height="500">
+    </section>
+
+    <!-- About Section -->
+    <section class="about" id="about">
+        <div class="image_sec">
+            <img src="img2.png" alt="About Ambica" width="400" height="500">
         </div>
-      </div>
-      <div class="intro_sec">
-        <h2> About <span>me</span></h2>
-        <p>I'm a dedicated student with a thirst for knowledge and personal growth. Each day is an opportunity to learn, explore, and create. I believe in building a brighter future through education, embracing curiosity, resilience, and a deep passion for improvement. Join me on this exciting educational journey through my portfolio, where challenges are opportunities, and lessons pave the way to a brighter tomorrow. Thank you for being a part of my ongoing exploration as a student.</p>
-        <ul class="resumelist">
-            <li class="listitems item1">Skill</li>
-        </ul>
-        <ul class="item1list">
-            <li><span>UI/UX Designer</span>
-            </br>
-            Designing wed app interfaces
-            </li>
-            <li><span>Full Stack Python Developer</span>
-            </br>
-            Developing Wed Apps using Python FrameWorks
-            </li>
-        </ul>
-      </div>
-    </div>
-    <div class="projects">
-        <div class="head"><h2><span>Cert</span>ificates</h2></div>
-       <div class="container_cert">
-            <div class="sec">
-                <div class="cert">
-                    <img src="Aws Certificate1.png" alt="Aws Certificates">
-                </div>
-            </div>
-            <div class="sec">
-                <div class="cert">
-                    <img src="Aws Certificate2.png" alt="Aws Certificates">
-                </div>
-            </div>
-            <div class="sec">
-                <div class="cert">
-                    <img src="jira.png" alt="Jira">
-                </div>
-            </div>
-            <div class="sec">
-                <div class="cert">
-                    <img src="java.png" alt="Java">
-                </div>
-            </div>
-       </div>
-    </div>
-    <div class="contact">
+        <div class="intro_sec">
+            <h2>About <span>Me</span></h2>
+            <p>
+                I'm a dedicated student with a thirst for knowledge and personal growth. I believe in building a brighter future through education, curiosity, and resilience.
+                Explore my portfolio to see how I transform challenges into opportunities and how my journey unfolds.
+            </p>
+            <ul class="resumelist">
+                <li class="listitems">Skills</li>
+            </ul>
+            <ul class="item1list">
+                <li>
+                    <span>UI/UX Designer</span><br>
+                    Designing web app interfaces
+                </li>
+                <li>
+                    <span>Full Stack Python Developer</span><br>
+                    Developing web applications using Python frameworks
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Certificates -->
+    <section class="projects" id="Certificates">
+        <h2 class="head"><span>Cert</span>ificates</h2>
+        <div class="container_cert">
+            <div class="sec"><img src="Aws Certificate1.png" alt="AWS Certificate 1"></div>
+            <div class="sec"><img src="Aws Certificate2.png" alt="AWS Certificate 2"></div>
+            <div class="sec"><img src="jira.png" alt="Jira Certificate"></div>
+            <div class="sec"><img src="java.png" alt="Java Certificate"></div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section class="contact" id="Contact">
         <div class="section_title">
             <h2><span>Con</span>tact</h2>
             <h3>Get in Touch</h3>
         </div>
         <div class="content">
-            <div class="contact_left">
-                <form action="">
-                    <input type="text" name="name" id="name" placeholder="Your Name" required/>
-                    <input type="email" name="email" id="email" placeholder="Your Email" required/>
-                    <textarea type
-                     name="message" id="message"rows="6">Your Message
-                    </textarea>
-                    <button class="btn" type="submit">Send Message</button>
-                </form>
-            </div>
+            <form action="#" method="POST">
+                <label for="name" hidden>Name</label>
+                <input type="text" name="name" id="name" placeholder="Your Name" required>
+                
+                <label for="email" hidden>Email</label>
+                <input type="email" name="email" id="email" placeholder="Your Email" required>
+
+                <label for="message" hidden>Message</label>
+                <textarea name="message" id="message" rows="6" placeholder="Your Message" required></textarea>
+                
+                <button class="btn" type="submit">Send Message</button>
+            </form>
         </div>
-    </div>
-    <div class="footer">
-        <h3>2023&nbsp;&copy;&nbsp;Ambica || Made with&nbsp;&hearts;&nbsp;by Ambica</h3>
-    </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <h3>&copy; 2023 Ambica | Made with <span style="color:red;">♥</span> by Ambica</h3>
+    </footer>
+
     <script src="app.js"></script>
 </body>
 </html>
