--- a/index.html
+++ b/index.html
@@ -1,129 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ambica Portfolio</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Ambica Portfolio</title>
 
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;500;600;800&family=Poppins:wght@300;400;500;900&family=Roboto+Mono:wght@300;500;700&family=Roboto+Slab:wght@200;300;400;700&display=swap" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet"/>
 
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" crossorigin="anonymous" />
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="style.css">
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- Navbar -->
+  <nav class="nav_bar">
+    <div class="left_side">
+      <h2><span style="color: orangered;">A</span>mbica</h2>
+    </div>
+    <div class="right_side">
+      <ul class="service_list">
+        <li><a href="#home" style="color: orangered;">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
 
-    <!-- Navbar -->
-    <nav class="nav_bar">
-        <div class="left_side">
-            <h2><span style="color: orangered;">A</span>mbica</h2>
-        </div>
-        <!-- Optional nav list (uncomment to use)
-        <div class="right_side">
-            <ul class="service_list">
-                <li><a href="#home" style="color: orangered;">Home</a></li>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#Certificates">Certificates</a></li>
-                <li><a href="#Contact">Contact</a></li>
-            </ul>
-        </div>
-        -->
-    </nav>
+  <!-- Home Section -->
+  <section class="main_container" id="home">
+    <div class="heading">
+      <h1>Hello, I'm <span style="color:orangered;">Ambica</span></h1>
+      <p>B.Tech student at KL University passionate about full-stack development, data analytics, and UI design.</p>
+      <a class="btns" href="https://drive.google.com/file/d/1WIuHvUFR2iTjh2Uvw-u56yK3NW_JV0qJ/view?usp=sharing" target="_blank">Download CV</a>
+      <div class="social_icons">
+        <a href="https://github.com/BAmbica39" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/bejagama-ambica-21b19b26b/" target="_blank"><i class="fab fa-linkedin"></i></a>
+      </div>
+    </div>
+  </section>
 
-    <!-- Main Section -->
-    <section class="main_container" id="home">
-        <div class="left_container">
-            <div class="heading">
-                <h1>Hi, I'm Bejagama <span style="color:orangered;">Ambica</span></h1>
-                <p>
-                    I'm a passionate student on a journey of self-discovery through learning and creativity.
-                    This portfolio is a glimpse into my evolving world of knowledge and the projects that fuel my curiosity.
-                </p>
-                <a class="btns" href="https://drive.google.com/file/d/1WIuHvUFR2iTjh2Uvw-u56yK3NW_JV0qJ/view?usp=sharing" target="_blank" download="Ambica_CV.pdf">Download CV</a>
-                <div class="social_icons">
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="#"><i class="fa-brands fa-github"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="right_container">
-            <img src="img.png" alt="Ambica photo">
-        </div>
-    </section>
+  <!-- About Section -->
+  <section class="about" id="about">
+    <h2>About <span>Me</span></h2>
+    <p>
+      I’m currently pursuing a B.Tech at KL University with a CGPA of 9.74. I love building applications that solve real-world problems. My interests lie in frontend development, data analytics, and project collaboration.
+    </p>
+    <h3>Skills</h3>
+    <ul>
+      <li><strong>Languages:</strong> C, Java, Python</li>
+      <li><strong>Web:</strong> HTML/CSS, JavaScript, React.js</li>
+      <li><strong>Database:</strong> MySQL</li>
+      <li><strong>Tools:</strong> Power BI, Jira, Agile, MS Access</li>
+    </ul>
+    <h3>Certifications</h3>
+    <ul>
+      <li>Red Hat Certified Enterprise Application Developer (EX183)</li>
+      <li>Automation Anywhere Advanced Automation Certified</li>
+    </ul>
+  </section>
 
-    <!-- About Section -->
-    <section class="about" id="about">
-        <div class="image_sec">
-            <img src="img2.png" alt="About Ambica" width="400" height="500">
-        </div>
-        <div class="intro_sec">
-            <h2>About <span>Me</span></h2>
-            <p>
-                I'm a dedicated student with a thirst for knowledge and personal growth. I believe in building a brighter future through education, curiosity, and resilience.
-                Explore my portfolio to see how I transform challenges into opportunities and how my journey unfolds.
-            </p>
-            <ul class="resumelist">
-                <li class="listitems">Skills</li>
-            </ul>
-            <ul class="item1list">
-                <li>
-                    <span>UI/UX Designer</span><br>
-                    Designing web app interfaces
-                </li>
-                <li>
-                    <span>Full Stack Python Developer</span><br>
-                    Developing web applications using Python frameworks
-                </li>
-            </ul>
-        </div>
-    </section>
+  <!-- Projects Section -->
+  <section class="projects" id="projects">
+    <h2><span>Pro</span>jects</h2>
+    <ul>
+      <li><strong>Big Mart Sales Prediction:</strong> Built an ML model using Python and scikit-learn to predict sales across store outlets.</li>
+      <li><strong>Sales Insights Dashboard:</strong> Developed Power BI dashboard for retail hardware business to drive sales strategy.</li>
+      <li><strong>Portal-360 Landing Page:</strong> Designed company website during internship using React.js.</li>
+      <li><strong>Converse-ERP Portal:</strong> Built components for ERP modules in React during internship at Piersoft Technologies.</li>
+      <li><strong>Accounting Software:</strong> Designed an accounting system in MS Access for a rice mill.</li>
+    </ul>
+  </section>
 
-    <!-- Certificates -->
-    <section class="projects" id="Certificates">
-        <h2 class="head"><span>Cert</span>ificates</h2>
-        <div class="container_cert">
-            <div class="sec"><img src="Aws Certificate1.png" alt="AWS Certificate 1"></div>
-            <div class="sec"><img src="Aws Certificate2.png" alt="AWS Certificate 2"></div>
-            <div class="sec"><img src="jira.png" alt="Jira Certificate"></div>
-            <div class="sec"><img src="java.png" alt="Java Certificate"></div>
-        </div>
-    </section>
+  <!-- Contact Section -->
+  <section class="contact" id="contact">
+    <h2><span>Con</span>tact</h2>
+    <form action="#" method="POST">
+      <input type="text" name="name" placeholder="Your Name" required />
+      <input type="email" name="email" placeholder="Your Email" required />
+      <textarea name="message" rows="6" placeholder="Your Message" required></textarea>
+      <button class="btn" type="submit">Send Message</button>
+    </form>
+  </section>
 
-    <!-- Contact Section -->
-    <section class="contact" id="Contact">
-        <div class="section_title">
-            <h2><span>Con</span>tact</h2>
-            <h3>Get in Touch</h3>
-        </div>
-        <div class="content">
-            <form action="#" method="POST">
-                <label for="name" hidden>Name</label>
-                <input type="text" name="name" id="name" placeholder="Your Name" required>
-                
-                <label for="email" hidden>Email</label>
-                <input type="email" name="email" id="email" placeholder="Your Email" required>
+  <!-- Footer -->
+  <footer class="footer">
+    <p>&copy; 2025 Ambica | Built with ❤️ by Ambica</p>
+  </footer>
 
-                <label for="message" hidden>Message</label>
-                <textarea name="message" id="message" rows="6" placeholder="Your Message" required></textarea>
-                
-                <button class="btn" type="submit">Send Message</button>
-            </form>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer">
-        <h3>&copy; 2023 Ambica | Made with <span style="color:red;">♥</span> by Ambica</h3>
-    </footer>
-
-    <script src="app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
