--- a/index.html
+++ b/index.html
@@ -67,11 +67,26 @@
   <section class="projects" id="projects">
     <h2><span>Pro</span>jects</h2>
     <ul>
-      <li><strong>Big Mart Sales Prediction:</strong> Built an ML model using Python and scikit-learn to predict sales across store outlets.</li>
-      <li><strong>Sales Insights Dashboard:</strong> Developed Power BI dashboard for retail hardware business to drive sales strategy.</li>
-      <li><strong>Portal-360 Landing Page:</strong> Designed company website during internship using React.js.</li>
-      <li><strong>Converse-ERP Portal:</strong> Built components for ERP modules in React during internship at Piersoft Technologies.</li>
-      <li><strong>Accounting Software:</strong> Designed an accounting system in MS Access for a rice mill.</li>
+      <li>
+        <strong>Big Mart Sales Prediction:</strong><br>
+        Built a predictive analytics pipeline using Python, scikit-learn, and XGBoost to forecast retail product sales across multiple outlets. Cleaned and engineered data by introducing MRP binning, outlet age categorization, and item type grouping. Leveraged ensemble learning via a Voting Regressor combining Ridge, Lasso, and Random Forest to reduce RMSE, achieving robust performance validated through k-fold cross-validation and feature importance analysis.
+      </li>
+      <li>
+        <strong>Sales Insights – Brick-and-Mortar Business:</strong><br>
+        Developed an interactive sales dashboard using Power BI and SQL to visualize and analyze monthly revenue, regional performance, and product category breakdowns for AtliQ hardware. Integrated data sources and implemented slicers and KPIs to aid business leaders in data-driven decision-making. Projected to boost quarterly revenue by 7% through optimized product focus.
+      </li>
+      <li>
+        <strong>Portal-360 Landing Page:</strong><br>
+        Designed and deployed a responsive landing page for Portal-360 using React, HTML, CSS, and JavaScript during my internship at Piersoft Technologies. Focused on modular UI design, mobile responsiveness, and component reusability for scalable web architecture.
+      </li>
+      <li>
+        <strong>Converse ERP Portal:</strong><br>
+        Contributed to front-end development of an enterprise ERP solution (Converse) at Piersoft. Implemented purchase module components and master data views using React.js. Collaborated with backend teams to ensure seamless API integration and dynamic rendering based on user roles and workflows.
+      </li>
+      <li>
+        <strong>Accounting Software for Rice Mill:</strong><br>
+        Designed a lightweight desktop-based accounting application using Microsoft Access tailored for small-scale rice mill operations. Incorporated features for sales tracking, expense management, ledger reporting, and tax summaries. Reduced manual bookkeeping errors and streamlined operational accounting.
+      </li>
     </ul>
   </section>
 
