--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="heading">
       <h1>Hello, I'm <span style="color:orangered;">Ambica</span></h1>
       <p>B.Tech student at KL University passionate about full-stack development, data analytics, and UI design.</p>
-      <a class="btns" href="https://drive.google.com/file/d/1WIuHvUFR2iTjh2Uvw-u56yK3NW_JV0qJ/view?usp=sharing" target="_blank">Download CV</a>
+      <a class="btns" href="https://drive.google.com/file/d/1sTsfaSU_AXNK7Tpas0eTIURQUPeJcAsP/view?usp=drive_link" target="_blank">Download CV</a>
       <div class="social_icons">
         <a href="https://github.com/BAmbica39" target="_blank"><i class="fab fa-github"></i></a>
         <a href="https://www.linkedin.com/in/bejagama-ambica-21b19b26b/" target="_blank"><i class="fab fa-linkedin"></i></a>
