--- a/index.html
+++ b/index.html
@@ -91,15 +91,17 @@
   </section>
 
   <!-- Contact Section -->
-  <section class="contact" id="contact">
-    <h2><span>Con</span>tact</h2>
-    <form action="#" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required />
-      <input type="email" name="email" placeholder="Your Email" required />
-      <textarea name="message" rows="6" placeholder="Your Message" required></textarea>
-      <button class="btn" type="submit">Send Message</button>
-    </form>
-  </section>
+  <!-- Contact Section -->
+<section class="contact" id="contact">
+  <h2><span>Con</span>tact</h2>
+  <form action="https://formspree.io/f/manjpwlz" method="POST"> <!-- Replace with your actual endpoint -->
+    <input type="text" name="name" placeholder="Your Name" required />
+    <input type="email" name="email" placeholder="Your Email" required />
+    <textarea name="message" rows="6" placeholder="Your Message" required></textarea>
+    <button class="btn" type="submit">Send Message</button>
+  </form>
+</section>
+
 
   <!-- Footer -->
   <footer class="footer">
