--- a/index.html
+++ b/index.html
@@ -69,45 +69,41 @@
     <ul>
       <li>
         <strong>Big Mart Sales Prediction:</strong><br>
-        Built a predictive analytics pipeline using Python, scikit-learn, and XGBoost to forecast retail product sales across multiple outlets. Cleaned and engineered data by introducing MRP binning, outlet age categorization, and item type grouping. Leveraged ensemble learning via a Voting Regressor combining Ridge, Lasso, and Random Forest to reduce RMSE, achieving robust performance validated through k-fold cross-validation and feature importance analysis.
+        Built a predictive analytics pipeline using Python, scikit-learn, and XGBoost to forecast retail product sales across multiple outlets. Included feature engineering and ensemble modeling for high accuracy.
       </li>
       <li>
         <strong>Sales Insights – Brick-and-Mortar Business:</strong><br>
-        Developed an interactive sales dashboard using Power BI and SQL to visualize and analyze monthly revenue, regional performance, and product category breakdowns for AtliQ hardware. Integrated data sources and implemented slicers and KPIs to aid business leaders in data-driven decision-making. Projected to boost quarterly revenue by 7% through optimized product focus.
+        Developed a Power BI dashboard using SQL data to help hardware businesses visualize and improve sales strategies.
       </li>
       <li>
         <strong>Portal-360 Landing Page:</strong><br>
-        Designed and deployed a responsive landing page for Portal-360 using React, HTML, CSS, and JavaScript during my internship at Piersoft Technologies. Focused on modular UI design, mobile responsiveness, and component reusability for scalable web architecture.
+        Designed a responsive web landing page during internship at Piersoft using HTML, CSS, and React.
       </li>
       <li>
         <strong>Converse ERP Portal:</strong><br>
-        Contributed to front-end development of an enterprise ERP solution (Converse) at Piersoft. Implemented purchase module components and master data views using React.js. Collaborated with backend teams to ensure seamless API integration and dynamic rendering based on user roles and workflows.
+        Contributed to ERP web portal modules in React and collaborated on backend integration during internship.
       </li>
       <li>
-        <strong>Accounting Software for Rice Mill:</strong><br>
-        Designed a lightweight desktop-based accounting application using Microsoft Access tailored for small-scale rice mill operations. Incorporated features for sales tracking, expense management, ledger reporting, and tax summaries. Reduced manual bookkeeping errors and streamlined operational accounting.
+        <strong>Accounting Software:</strong><br>
+        Built a Microsoft Access-based accounting system for a rice mill to manage ledgers and reduce manual errors.
       </li>
     </ul>
   </section>
 
   <!-- Contact Section -->
-  <!-- Contact Section -->
-<section class="contact" id="contact">
-  <h2><span>Con</span>tact</h2>
-  <form action="https://formspree.io/f/manjpwlz" method="POST"> <!-- Replace with your actual endpoint -->
-    <input type="text" name="name" placeholder="Your Name" required />
-    <input type="email" name="email" placeholder="Your Email" required />
-    <textarea name="message" rows="6" placeholder="Your Message" required></textarea>
-    <button class="btn" type="submit">Send Message</button>
-  </form>
-</section>
-
+  <section class="contact" id="contact">
+    <h2><span>Con</span>tact</h2>
+    <form action="https://formspree.io/f/manjpwlz" method="POST">
+      <input type="text" name="name" placeholder="Your Name" required />
+      <input type="email" name="email" placeholder="Your Email" required />
+      <textarea name="message" rows="6" placeholder="Your Message" required></textarea>
+      <button class="btn" type="submit">Send Message</button>
+    </form>
+  </section>
 
   <!-- Footer -->
   <footer class="footer">
     <p>&copy; 2025 Ambica | Built with ❤️ by Ambica</p>
   </footer>
-
-  <script src="app.js"></script>
 </body>
 </html>
