--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
         Developed a Power BI dashboard using SQL data to help hardware businesses visualize and improve sales strategies.
       </li>
       <li>
+        <strong>Customer Churn Prediction with Artificial Neural Networks (American Express):</strong><br>
+        This project demonstrates a deep learning approach to customer churn prediction for American Express. I used Python, TensorFlow, and scikit-learn to preprocess structured data from an Excel file, including encoding categorical features and standardizing numeric values. I then designed and trained an Artificial Neural Network with two hidden layers to predict whether a customer would churn. The model achieved an accuracy of 85.5%, evaluated using a confusion matrix and accuracy score. This solution helps identify at-risk customers and supports data-driven retention strategies.
+      </li>
+      <li>
         <strong>Portal-360 Landing Page:</strong><br>
         Designed a responsive web landing page during internship at Piersoft using HTML, CSS, and React.
       </li>
