--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </li>
       <li>
         <strong>Customer Churn Prediction with Artificial Neural Networks (American Express):</strong><br>
-        This project demonstrates a deep learning approach to customer churn prediction for American Express. I used Python, TensorFlow, and scikit-learn to preprocess structured data from an Excel file, including encoding categorical features and standardizing numeric values. I then designed and trained an Artificial Neural Network with two hidden layers to predict whether a customer would churn. The model achieved an accuracy of 85.5%, evaluated using a confusion matrix and accuracy score. This solution helps identify at-risk customers and supports data-driven retention strategies.
+        Built an ANN-based churn prediction model using Python and TensorFlow on American Express customer data. Preprocessed features, encoded categories, and achieved 85% accuracy using confusion matrix.
       </li>
       <li>
         <strong>Portal-360 Landing Page:</strong><br>
