--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="heading">
       <h1>Hello, I'm <span style="color:orangered;">Ambica</span></h1>
       <p>B.Tech student at KL University passionate about full-stack development and data analytics. I enjoy building end-to-end web applications and uncovering insights through data. With a strong foundation in both front-end and back-end technologies, I continuously seek to learn new tools and frameworks to deliver efficient, real-world solutions.</p>
-      <a class="btns" href="https://drive.google.com/file/d/1sTsfaSU_AXNK7Tpas0eTIURQUPeJcAsP/view?usp=drive_link" target="_blank">Download CV</a>
+      <a class="btns" href="https://drive.google.com/file/d/1jePWzOPxK-6cP6dpcApEQ9kI3NLoF4fK/view?usp=sharing" target="_blank">Download CV</a>
       <div class="social_icons">
         <a href="https://github.com/BAmbica39" target="_blank"><i class="fab fa-github"></i></a>
         <a href="https://www.linkedin.com/in/bejagama-ambica-21b19b26b/" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -111,3 +111,4 @@
   </footer>
 </body>
 </html>
+
